# video-agent

./: .args.example  .env.example  .gitignore  README.md  pyproject.toml
configs/: categories.yaml  era_rules.yaml  output_routing.yaml  platforms.yaml  providers.yaml  render_presets.yaml
prompts/: era_constraints.md  era_media_guard.md  era_profile.md  era_rewrite.md  history_classical_translation.md  history_factual.md  outline_user.md  safety_judge.md  script_user.md  system.md
scripts/: install_linux.sh  install_windows.bat  install_windows.ps1  run_linux.sh  run_windows.ps1
series/: history_qin.yaml
src/shortvideo_agent/: config.py  logging_conf.py  main.py  series_cli.py
src/shortvideo_agent/constraints/: era.py
src/shortvideo_agent/memory/: __init__.py  models.py  store.py
src/shortvideo_agent/pipeline/: __init__.py  orchestrator.py  render.py  storyboard.py
src/shortvideo_agent/providers/: __init__.py  images_kling.py  images_openai.py  images_qwen.py  images_router.py  llm_compat.py  llm_openai.py  llm_router.py  tts_edge.py  uploader_configurable.py  uploader_stub.py  video_clips_kling.py  video_clips_openai.py  video_clips_qwen.py  video_ffmpeg.py  video_router.py  video_trim_ffmpeg.py
src/shortvideo_agent/providers/external_media/: archive_org.py  base.py  era_guard.py  pexels.py  pixabay.py  router.py
src/shortvideo_agent/safety/: __init__.py  judge.py  policy.py
src/shortvideo_agent/utils/: __init__.py  args_file.py  files.py  series_file.py  templating.py  text.py  token_estimator.py  trace_stats.py  tracing.py
tests/: test_policy.py
(+6 files in other folders)
