[project]
name = "shortvideo-agent"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "typer>=0.12",
  "tenacity>=8.2",
  "PyYAML>=6.0.1",
  "rapidfuzz>=3.6.1",
  "requests>=2.31.0",
  "PyJWT>=2.8.0",
  "openai>=1.40.0",
  "edge-tts>=6.1.9",
]

[project.scripts]
shortvideo-agent = "shortvideo_agent.main:app"